--- a/svelte/src/app.html
+++ b/svelte/src/app.html
@@ -4,6 +4,21 @@
 		<meta charset="utf-8" />
 		<link rel="icon" href="%sveltekit.assets%/favicon.ico" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
+
+		<!-- Open Graph / Facebook -->
+		<meta property="og:type" content="website" />
+		<meta property="og:url" content="https://www.alexschnabl.com/" />
+		<meta property="og:title" content="Alex Schnabl | Personal Website" />
+		<meta property="og:description" content="Portfolio of Alex Schnabl - Co-Founder, CEO and Developer at S&S Technologies GmbH. View Alex's projects and learn about his work as an expert programmer and IT entrepreneur." />
+		<meta property="og:image" content="https://api.alexschnabl.com/as/assets/13ba63fb-834b-439a-933f-2904414f4c22" />
+
+		<!-- Twitter -->
+		<meta property="twitter:card" content="summary_large_image" />
+		<meta property="twitter:url" content="https://www.alexschnabl.com/" />
+		<meta property="twitter:title" content="Alex Schnabl | Personal Website" />
+		<meta property="twitter:description" content="Portfolio of Alex Schnabl - Co-Founder, CEO and Developer at S&S Technologies GmbH. View Alex's projects and learn about his work as an expert programmer and IT entrepreneur." />
+		<meta property="twitter:image" content="https://api.alexschnabl.com/as/assets/13ba63fb-834b-439a-933f-2904414f4c22" />
+
 		%sveltekit.head%
 	</head>
 	<body data-sveltekit-preload-data="hover" class="overflow-x-hidden bg-neutral-900">
